--- a/setup.cfg
+++ b/setup.cfg
@@ -24,11 +24,12 @@ setup_requires =
   pybind11>=2.2
   cmake>=3.10
 install_requires = 
+  click
+  importlib_resources
+  h5py
+  lxml
   numpy
   scipy
-  h5py
-  importlib_resources
-  click
 tests_requires = pytest
 
 [options.entry_points]
