--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,10 @@ name = nuSpaceSim
 author = Alex Reustle
 author_email = alexander.reustle@nasa.gov
 description = A Simulator for Space-based Nutrino Detections
-keywords = nutrino
+keywords =
+  nutrinos
+  NASA
+  Simulation
 license = MIT
 classifiers =
     Intended Audience :: Science/Research
@@ -19,6 +22,7 @@ long_description_content_type = text/markdown
 zip_safe = False
 packages = find:
 include_package_data=True
+python_requires = >= 3.6
 setup_requires =
   pytest-runner
   pybind11>=2.2
