Simplify setup.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,12 +22,12 @@ long_description_content_type = text/markdown
 zip_safe = False
 packages = find:
 include_package_data=True
-python_requires = >= 3.6
+python_requires = >= 3.7
 setup_requires =
   pytest-runner
-  pybind11>=2.2
-  cmake>=3.10
-install_requires = 
+  pybind11>=2.6
+  numpy>=1.19
+install_requires =
   click
   importlib_resources
   h5py
