--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ tests_requires = pytest
 
 [options.entry_points]
 console_scripts =
-  nuSpaceSim = nuSpaceSim.main:main
+  nuSpaceSim = nuSpaceSim.cli:cli
 
 [aliases]
 test=pytest
