Fix invalid tauEnergies bug and improve install structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,9 @@
 name = nuSpaceSim
 author = Alex Reustle
 author_email = alexander.reustle@nasa.gov
-description = A Simulator for Space-based Nutrino Detections
+description = A Simulator for Space-based Neutrino Detections
 keywords =
-  nutrinos
+  neutrinos
   NASA
   Simulation
 license = MIT
@@ -25,15 +25,12 @@ include_package_data=True
 python_requires = >= 3.7
 setup_requires =
   pytest-runner
-  pybind11>=2.6
-  numpy>=1.19
 install_requires =
   click
   importlib_resources
   h5py
   lxml
   numpy
-  # numba
   scipy
 tests_requires = pytest
 
