--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,29 @@
 [build-system]
 requires = ["setuptools", "wheel", "pybind11 >= 2.6"]
 build-backend = "setuptools.build_meta"
+
+[tool.black]
+line-length = 80
+skip-string-normalization = false
+exclude = '''
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+  )/
+#  | foo.py           # also separately exclude a file named foo.py in
+#                     # the root of the project
+)
+'''
+
+[tool.autopep8]
+max_line_length = 80
+ignore = "E501,W6"  # or ["E501", "W6"]
