--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ keywords =
 license = MIT
 classifiers =
     Intended Audience :: Science/Research
-    Programming Language :: C++ :: 11
+    Programming Language :: C++ :: 14
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
@@ -32,7 +32,8 @@ install_requires =
   lxml
   numpy
   scipy
-tests_requires = pytest
+tests_requires =
+  pytest
 
 [options.entry_points]
 console_scripts =
@@ -40,3 +41,9 @@ console_scripts =
 
 [aliases]
 test=pytest
+
+[yapf]
+based_on_style = pep8
+spaces_before_comment = 2
+split_before_logical_operator = True
+column_limit=80
