Setup Configuration updated for PyPI comptibility

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,18 @@
 [metadata]
 name = nuSpaceSim
+version = 0.1.0
 author = Alex Reustle
 author_email = alexander.reustle@nasa.gov
 description = A Simulator for Space-based Neutrino Detections
 keywords =
-  neutrinos
   NASA
+  neutrinos
   Simulation
 license = MIT
 classifiers =
     Intended Audience :: Science/Research
-    Programming Language :: C++ :: 14
+    Programming Language :: C++
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
