--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,33 +1,31 @@
 name: Publish Python 🐍 distributions 📦 to TestPyPI
 
-on: push
+on: [push]
 
 jobs:
   build-n-publish:
+    
     name: Build and publish Python 🐍 distributions 📦 to TestPyPI
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8, 3.9]
+
     steps:
-    - uses: actions/checkout@master
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v1
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
       with:
         python-version: 3.9
     - name: Install pypa/build
       run: >-
-        python -m
-        pip install
-        build
-        --user
-    - name: Build a binary wheel and a source tarball
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+    - name: Build a binary wheel and publish to test-pypi
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSQORD: ${{ secrets.test_pypi_password }}
       run: >-
-        python -m
-        build
-        --sdist
-        --wheel
-        --outdir dist/
-        .
-    - name: Publish distribution 📦 to Test PyPI
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.test_pypi_password }}
-        repository_url: https://test.pypi.org/legacy/
+        python setup.py bdist_wheel
+        twine upload dist/*
