--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -6,7 +6,7 @@ jobs:
   build-n-publish:
     
     name: Build and publish Python 🐍 distributions 📦 to TestPyPI
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, macos-latest]
     
     strategy:
       matrix:
@@ -21,7 +21,7 @@ jobs:
     - name: Install pypa/build
       run: >-
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install setuptools wheel twine pybind11
     - name: Build a binary wheel and publish to test-pypi
       env:
         TWINE_USERNAME: __token__
