--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -18,15 +18,15 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: '3.x'
     - name: Install pypa/build
-      run: >-
+      run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine pybind11
     - name: Build a binary wheel and publish to test-pypi
       env:
-        TWINE_USERNAME: areustle
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.test_pypi_password }}
       run: |
-        python setup.py sdist bdist_wheel
+        python setup.py bdist_wheel
         twine upload dist/*
