--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -29,4 +29,4 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.test_pypi_password }}
       run: |
         python setup.py bdist_wheel
-        twine upload dist/*
+        twine upload --repository testpypi dist/*
