--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [cp37-cp37m]
 
     steps:
     - uses: actions/checkout@v2
@@ -23,10 +23,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine pybind11
-    - name: Build a binary wheel and publish to test-pypi
+    - name: Python wheels manylinux build
+      uses: RalfG/python-wheels-manylinux-build@v0.3.3
+      with:
+        python-version: ${{ matrix.python-version }}
+        build-requirements: 'pybind11'
+    - name: Publish to test-pypi
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.test_pypi_password }}
       run: |
-        python setup.py bdist_wheel
         twine upload --repository testpypi dist/*
