--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -3,16 +3,12 @@ name: Publish Python 🐍 distributions 📦 to TestPyPI
 on: [push]
 
 jobs:
-  build-n-publish:
-    
+  linux-build-n-publish:
     name: Build and publish Python 🐍 distributions 📦 to TestPyPI
-    runs-on: ${{ matrix.os }}
-    
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        python-version: [cp37-cp37m]
-
+        python-version: [cp36-cp36m cp37-cp37m]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -28,6 +24,33 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         build-requirements: 'pybind11'
+    - name: Publish to test-pypi
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.test_pypi_password }}
+      run: |
+        twine upload --repository testpypi dist/*
+
+
+  macos-build-n-publish:
+    name: Build and publish Python 🐍 distributions 📦 to TestPyPI
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: [cp36-cp36m cp37-cp37m]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Install pypa/build
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine pybind11
+    - name: Python wheels manylinux build
+      run: |
+        python setup.py bdist_wheel
     - name: Publish to test-pypi
       env:
         TWINE_USERNAME: __token__
