--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifiers =
     Programming Language :: C++
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
@@ -24,7 +25,7 @@ long_description_content_type = text/markdown
 zip_safe = False
 packages = find:
 include_package_data=True
-python_requires = >= 3.7
+python_requires = >= 3.6
 setup_requires =
   pytest-runner
 install_requires =
