--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine pybind11
-    - name: Python wheels manylinux build
+    - name: Python wheels MacOS build
       run: |
         python setup.py bdist_wheel
     - name: Publish to test-pypi
