--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -8,19 +8,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
+
     - name: Install pypa/build
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine pybind11
-    - name: Python wheels manylinux build
-      uses: RalfG/python-wheels-manylinux-build@v0.3.3
+
+    - name: Python wheels manylinux-2010 build
+      uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
       with:
         python-version: 'cp36-cp36m cp37-cp37m cp38-cp38m cp39-cp39m'
         build-requirements: 'pybind11'
+
     - name: Publish to test-pypi
       env:
         TWINE_USERNAME: __token__
