--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Python wheels manylinux-2010 build
       uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
       with:
-        python-version: 'cp36-cp36m cp37-cp37m cp38-cp38m cp39-cp39m'
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m cp39-cp39m'
         build-requirements: 'pybind11'
 
     - name: Publish to test-pypi
