--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -33,11 +33,12 @@ jobs:
         find dist -name "*manylinux*.whl" -exec twine upload --repository testpypi {} \;
 
 
-  macos-build-n-publish:
+  macos-windows-build-n-publish:
     name: Build and publish Python 🐍 distributions 📦 to TestPyPI
-    runs-on: macos-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
@@ -49,7 +50,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine pybind11
-    - name: Python wheels MacOS build
+    - name: Python wheels build
       run: |
         python setup.py bdist_wheel
     - name: Publish to test-pypi
