--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nuSpaceSim
-version = test.2
+version = 0.0.test2
 author = Alex Reustle
 author_email = alexander.reustle@nasa.gov
 description = A Simulator for Space-based Neutrino Detections
