--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nuSpaceSim
-version = 0.1.2
+version = attr: nuSpaceSim.__version__
 author = Alex Reustle
 author_email = alexander.reustle@nasa.gov
 description = A Simulator for Space-based Neutrino Detections
@@ -30,7 +30,7 @@ setup_requires =
   pytest-runner
 install_requires =
   click
-  dask[complete]
+  dask
   importlib_resources
   h5py
   lxml
