--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   linux-build-n-publish:
-    name: Build and publish Python 🐍 distributions 📦 to TestPyPI
+    name: Build and publish Linux Python 🐍 distributions 📦 to TestPyPI
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -12,15 +12,15 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Install pypa/build
+    - name: Install build requirements
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine pybind11 version-query
+        pip install setuptools wheel twine pybind11 setuptools_scm
     - name: Python wheels manylinux build
       uses: RalfG/python-wheels-manylinux-build@v0.3.3
       with:
         python-version: 'cp36-cp36m cp37-cp37m cp38-cp38m cp39-cp39m'
-        build-requirements: 'pybind11 version-query'
+        build-requirements: 'pybind11 setuptools_scm'
     - name: Publish to test-pypi
       env:
         TWINE_USERNAME: __token__
@@ -30,21 +30,21 @@ jobs:
 
 
   macos-build-n-publish:
-    name: Build and publish Python 🐍 distributions 📦 to TestPyPI
+    name: Build and publish MacOS Python 🐍 distributions 📦 to TestPyPI
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-versions: [3.6, 3.7, 3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install pypa/build
+    - name: Install build requirements
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine pybind11 version-query
+        pip install setuptools wheel twine pybind11 setuptools_scm
     - name: Python wheels MacOS build
       run: |
         pip wheel -w dist --no-deps .
