--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = ["setuptools>=46",
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
-
+local_scheme = ""
 
 [tool.black]
 line-length = 80
