Implemented Reno nu_tau tables from 2020 (shell density profile; 3 km water)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,2 @@
 include nuSpaceSim/DataLibraries/RenoNu2TauTables/nu2taudata.hdf5
+include nuSpaceSim/DataLibraries/RenoNu2TauTables/nu2taudata_v_2.hdf5
