conex rough integration

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ install_requires =
   importlib_resources
   h5py
   lxml
+  matplotlib
   numpy
   scipy
 tests_requires =
@@ -41,6 +42,7 @@ tests_requires =
 [options.entry_points]
 console_scripts =
   nuSpaceSim = nuSpaceSim.cli:cli
+  nuSpaceSim_conex_plotter = nuSpaceSim.EAScherGen.Conex.conex_plotter:conex_plotter
 
 [aliases]
 test=pytest
