added pythia-to-h5 and conex-to-h5 functionality to nuspacesim. polished some of the pythia decay code analysis (not finished with this yet).

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ tests_requires =
 [options.entry_points]
 console_scripts =
   nuSpaceSim = nuSpaceSim.cli:cli
-  nuSpaceSim_conex_plotter = nuSpaceSim.EAScherGen.Conex.conex_plotter:conex_plotter
+  #nuSpaceSim_conex_plotter = nuSpaceSim.EAScherGen.Conex.conex_plotter:conex_plotter
 
 [aliases]
 test=pytest
