Refactor Configuration Classes. New Storage Model. New XMLSchema Validator. Documentation.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = nuSpaceSim
+name = nuspacesim
 author = Alex Reustle
 author_email = alexander.reustle@nasa.gov
 description = A Simulator for Space-based Neutrino Detections
@@ -22,12 +22,13 @@ long_description_content_type = text/markdown
 
 [options]
 zip_safe = False
+ext_package = nuspacesim
 packages = find:
+package_dir =
+    = src
 include_package_data=True
-python_requires = >= 3.6
-setup_requires =
-  pytest-runner
 install_requires =
+  astropy
   click
   dask
   dask[distributed]
@@ -36,18 +37,42 @@ install_requires =
   lxml
   numpy
   scipy
-tests_requires =
-  pytest
+
+[options.packages.find]
+where = src
+
+[options.package_data]
+nuspacesim.DataLibraries.RenoNu2TauTables = nu2taudata.hdf5
 
 [options.entry_points]
 console_scripts =
-  nuSpaceSim = nuSpaceSim.cli:cli
+  nuspacesim = nuspacesim.apps.cli:cli
 
-[aliases]
-test=pytest
+[bdist_wheel]
+universal = 0
 
-[yapf]
-based_on_style = pep8
-spaces_before_comment = 2
-split_before_logical_operator = True
-column_limit=80
+[tox:tox]
+envlist = py{37,38,39} docs
+isolated_build = True
+
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+
+[testenv]
+deps =
+    pytest
+commands =
+    pytest {posargs:--verbose}
+
+[testenv:docs]
+description = invoke sphinx-build to build HTML docs
+deps =
+  sphinx
+  sphinx-argparse
+  sphinx-copybutton
+  sphinx-press-theme
+commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
+           python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
