--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = ["setuptools>=46",
             "setuptools_scm[toml]>=3.4",
             "wheel",
             "pybind11>=2.6",
+            "numpy>1.17",
            ]
 build-backend = "setuptools.build_meta"
 
@@ -10,11 +11,11 @@ build-backend = "setuptools.build_meta"
 write_to = '_version.py'
 version_scheme = 'post-release'
 local_scheme = 'no-local-version'
-parentdir_prefix_version = 'nupyprop-'
+parentdir_prefix_version = 'nuspacesim-'
 
 [tool.cibuildwheel]
 test-requires = "pytest"
-test-command = "pytest {project}/tests"
+test-command = "pytest {project}/test"
 
 [tool.cibuildwheel.macos]
 archs = ["x86_64"] #, "universal2", "arm64"]
