Configuration Object Revamp. XMLSchema Configfile implemented. Simulation Results object, and file output. Partial insource documentation.

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ install_requires =
 where = src
 
 [options.package_data]
-nuspacesim.DataLibraries.RenoNu2TauTables = nu2taudata.hdf5
+nuspacesim.data.RenoNu2TauTables = nu2taudata.hdf5
 
 [options.entry_points]
 console_scripts =
