--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ requires = ["setuptools>=46",
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
-write_to = '_version.py'
+write_to = 'src/nuspacesim/_version.py'
 version_scheme = 'post-release'
 local_scheme = 'no-local-version'
 parentdir_prefix_version = 'nuspacesim-'
