--- a/setup.cfg
+++ b/setup.cfg
@@ -13,9 +13,6 @@ classifiers =
     Programming Language :: C++
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -52,13 +49,13 @@ console_scripts =
 universal = 0
 
 [tox:tox]
-envlist = py{37,38,39} docs
+envlist =
+  py39
+  docs
 isolated_build = True
 
 [gh-actions]
 python =
-    3.7: py37
-    3.8: py38
     3.9: py39
 
 [testenv]
