Support Macos PyPI builds

--- a/.github/workflows/pypi-build-test-publish.yml
+++ b/.github/workflows/pypi-build-test-publish.yml
@@ -24,13 +24,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest] #, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         python: [39]
         include:
           - os: ubuntu-latest
             platform_id: manylinux_x86_64
-          # - os: macos-latest
-          #   platform_id: macosx_x86_64
+          - os: macos-latest
+            platform_id: macosx_x86_64
 
     steps:
     - uses: actions/checkout@v2
@@ -42,7 +42,6 @@ jobs:
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.0.0
       env:
-        # CIBW_ENVIRONMENT_MACOS: F90=gfortran-11
         CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
 
