--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,8 @@ classifiers =
     Programming Language :: C++
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -29,7 +31,8 @@ install_requires =
   click
   dask
   dask[distributed]
-  importlib_resources
+  importlib_metadata;python_version<"3.8"
+  importlib_resources;python_version<"3.9"
   h5py
   lxml
   numpy
@@ -50,12 +53,14 @@ universal = 0
 
 [tox:tox]
 envlist =
-  py39
+  py{37,38,39}
   docs
 isolated_build = True
 
 [gh-actions]
 python =
+    3.7: py37
+    3.8: py38
     3.9: py39
 
 [testenv]
@@ -70,6 +75,7 @@ deps =
   sphinx
   sphinx-argparse
   sphinx-copybutton
-  sphinx-press-theme
+  sphinx-rtd-theme
+  numpydoc
 commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
