--- a/.github/workflows/conda-build-publish.yml
+++ b/.github/workflows/conda-build-publish.yml
@@ -23,12 +23,12 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest] #, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         include:
           - os: ubuntu-latest
             platform: "linux-64"
-          # - os: macos-latest
-          #   platform: "osx-64"
+          - os: macos-latest
+            platform: "osx-64"
 
     steps:
     - uses: actions/checkout@v2
