--- a/setup.cfg
+++ b/setup.cfg
@@ -31,12 +31,14 @@ install_requires =
   click
   dask
   dask[distributed]
-  importlib_metadata;python_version<"3.8"
-  importlib_resources;python_version<"3.9"
   h5py
   lxml
   numpy
   scipy
+  # version specific backport includes
+  cached_property;python_version<"3.8"
+  importlib_metadata;python_version<"3.8"
+  importlib_resources;python_version<"3.9"
 
 [options.packages.find]
 where = src
