API reference documentation, quickstart documentation. In-source-documentation.

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,8 +75,7 @@ commands =
 description = invoke sphinx-build to build HTML docs
 deps =
   sphinx
-  sphinx-argparse
-  sphinx-copybutton
+  sphinx-panels
   sphinx-rtd-theme
   numpydoc
 commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
