massaging everything in my branch into the right form to ease the merge

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,28 @@ requires = ["setuptools>=46",
             "setuptools_scm[toml]>=3.4",
             "wheel",
             "pybind11>=2.6",
+            "numpy>1.17",
            ]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
-local_scheme = ""
+write_to = 'src/nuspacesim/_version.py'
+version_scheme = 'post-release'
+local_scheme = 'no-local-version'
+parentdir_prefix_version = 'nuspacesim-'
+
+[tool.cibuildwheel]
+test-requires = "pytest"
+test-command = "pytest {project}/test"
+
+[tool.cibuildwheel.macos]
+archs = ["x86_64"] #, "universal2", "arm64"]
+
+[tool.cibuildwheel.linux]
+archs = ["x86_64"]
 
 [tool.black]
-line-length = 80
+line-length = 88
 skip-string-normalization = false
 exclude = '''
 (
@@ -32,5 +46,5 @@ exclude = '''
 '''
 
 [tool.autopep8]
-max_line_length = 80
+max_line_length = 88
 ignore = "E501,W6"  # or ["E501", "W6"]
