Fix flake8 warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,12 @@ archs = ["x86_64"]
 [tool.black]
 line-length = 88
 skip-string-normalization = false
+include = '\.pyi?$'
 exclude = '''
 (
   /(
-      \.eggs         # exclude a few common directories in the
-    | \.git          # root of the project
+      \.eggs
+    | \.git
     | \.hg
     | \.mypy_cache
     | \.tox
@@ -40,8 +41,6 @@ exclude = '''
     | build
     | dist
   )/
-#  | foo.py           # also separately exclude a file named foo.py in
-#                     # the root of the project
 )
 '''
 
