--- a/.github/workflows/pypi-build-test-publish.yml
+++ b/.github/workflows/pypi-build-test-publish.yml
@@ -53,21 +53,21 @@ jobs:
         retention-days: 1
 
 
-  publish:
-    name: Publish wheels to PyPI
-    runs-on: ubuntu-latest
-    needs: build_wheels
+  # publish:
+  #   name: Publish wheels to PyPI
+  #   runs-on: ubuntu-latest
+  #   needs: build_wheels
 
-    steps:
-    - name: Download Build Artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: nuspacesim-gh-pypi-artifact
-        path: wheelhouse/
+  #   steps:
+  #   - name: Download Build Artifacts
+  #     uses: actions/download-artifact@v2
+  #     with:
+  #       name: nuspacesim-gh-pypi-artifact
+  #       path: wheelhouse/
 
-    - name: Publish a Python distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_SECRET }}
-        packages_dir: wheelhouse/
+  #   - name: Publish a Python distribution to PyPI
+  #     uses: pypa/gh-action-pypi-publish@release/v1
+  #     with:
+  #       user: __token__
+  #       password: ${{ secrets.PYPI_SECRET }}
+  #       packages_dir: wheelhouse/
