--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -1,8 +1,16 @@
-name: PyPI Build Python 🐍 wheel 🎡, Test 📝, and Publish 🎉.
+name: PyPI Build Python 🐍 wheel 🎡, Test 📝
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: [ main ]
+    paths:
+      - 'src/**'
+      - 'test/**'
+      - setup.py
+      - setup.cfg
+      - pyproject.toml
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -12,7 +20,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
         python: [37, 38, 39]
@@ -41,22 +49,3 @@ jobs:
         name: nuspacesim-gh-pypi-artifact
         path: wheelhouse/*.whl
         retention-days: 1
-
-  publish:
-    name: Publish wheels to PyPI
-    runs-on: ubuntu-latest
-    needs: build_wheels
-
-    steps:
-    - name: Download Build Artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: nuspacesim-gh-pypi-artifact
-        path: wheelhouse/
-
-    - name: Publish a Python distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_SECRET }}
-        packages_dir: wheelhouse/
