--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ install_requires =
   lxml
   matplotlib
   numpy
+  rich
   scipy
   # version specific backport includes
   cached_property;python_version<"3.8"
