moved current console script integration to cli_misc.py. commands can be accessed via nuspacesim-misc. have yet to change directory import references for each submodule.

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ nuspacesim.data.RenoNu2TauTables = nu2taudata.hdf5
 [options.entry_points]
 console_scripts =
   nuspacesim = nuspacesim.apps.cli:cli
+  nuspacesim-misc = nuspacesim.apps.cli_misc:cli_misc
 
 [bdist_wheel]
 universal = 0
