Disable Conda builds following unresolved build error.

--- a/.github/workflows/conda-build-test.yml
+++ b/.github/workflows/conda-build-test.yml
@@ -1,16 +1,16 @@
 name: Conda Build Python 🐍 package
 
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - 'src/**'
-      - 'tests/**'
-      - setup.py
-      - setup.cfg
-      - pyproject.toml
-  pull_request:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
+  #   paths:
+  #     - 'src/**'
+  #     - 'tests/**'
+  #     - setup.py
+  #     - setup.cfg
+  #     - pyproject.toml
+  # pull_request:
+  #   branches: [ main ]
   workflow_dispatch:
 
 jobs:
