--- a/setup.cfg
+++ b/setup.cfg
@@ -27,14 +27,14 @@ package_dir =
     = src
 include_package_data=True
 install_requires =
-  astropy
+  astropy >= 4.3
   click
   dask
   dask[distributed]
   h5py
   lxml
   matplotlib
-  numpy
+  numpy >= 1.20
   quadpy
   rich
   scipy
