--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,6 +6,7 @@ sphinx:
   configuration: docs/conf.py
 
 python:
-  version: 3.7
   install:
     - requirements: docs/requirements.txt
+    - method: pip
+      path: .
