--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,7 @@ sphinx:
 
 python:
   install:
-    - requirements: docs/requirements.txt
     - method: pip
       path: .
+  install:
+    - requirements: docs/requirements.txt
