--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,12 +2,18 @@
 
 version: 2
 
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.9"
+
 sphinx:
+  builder: html
   configuration: docs/conf.py
+  fail_on_warning: true
 
 python:
   install:
     - method: pip
       path: .
-  install:
     - requirements: docs/requirements.txt
