Documentation build alterations

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,12 @@ where = src
 
 [options.package_data]
 nuspacesim.data.RenoNu2TauTables = nu2taudata.hdf5
+nuspacesim.data.nupyprop_tables =
+  nu2tau_cdf.hdf5
+  nu2tau_pexit.hdf5
+nuspacesim.data.radio_params =
+  ionosphere_params.hdf5
+  waveform_params.hdf5
 
 [options.entry_points]
 console_scripts =
@@ -76,10 +82,10 @@ commands =
 
 [testenv:docs]
 description = invoke sphinx-build to build HTML docs
+basepython = python3.9
 deps =
   sphinx
   sphinx-panels
   sphinx-rtd-theme
-  numpydoc
-commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
+commands = python -m sphinx -T -E -W --keep-going -bhtml -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color {posargs}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
