Fully Pythonized version of RegionGeom, removes and replaces nssgeometry

--- a/setup.cfg
+++ b/setup.cfg
@@ -87,5 +87,5 @@ deps =
   sphinx
   sphinx-panels
   sphinx-rtd-theme
-commands = python -m sphinx -T -E -W --keep-going -bhtml -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color {posargs}
+commands = python -m sphinx -v -T -E -W --keep-going -bhtml -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color {posargs}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
