remove savefig plotting from taus_overview

--- a/sample_plot_config.ini
+++ b/sample_plot_config.ini
@@ -1,23 +1,16 @@
-[General]
-pop_up = yes
-fig_width = 10
-fig_height = 5
-save_as = pdf
-
 [Geometry]
 geom_beta_tr_hist = no
-geom_beta_tr_hist_red = no
 #interaction_height = no (to be implemented)
 
 [Taus]
 taus_scatter = no
 taus_pexit = no
-taus_histogram = no
-taus_overview = no
+taus_histogram = yes
+taus_overview = yes
 
 [EASOpitcal]
 eas_optical_scatter = no
-eas_optical_histogram = no
+eas_optical_histogram = yes
 
 [Detector]
 #event_count_at_detector = no (to be implemented)
