--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,6 @@ packages = find:
 install_requires =
     astropy>=4.3
     click
-    configparser
     dask
     dask[distributed]
     h5py
@@ -38,6 +37,7 @@ install_requires =
     rich
     scipy
     cached-property;python_version<"3.8"
+    configparser;python_version<"3.8"
     importlib-metadata;python_version<"3.8"
     importlib-resources;python_version<"3.9"
 python_requires = >=3.7
