--- a/.github/workflows/pypi-build-test-publish.yml
+++ b/.github/workflows/pypi-build-test-publish.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python: [37, 38, 39]
+        python: [37, 38, 39, 310]
         include:
           - os: ubuntu-latest
             platform_id: manylinux_x86_64
@@ -30,7 +30,7 @@ jobs:
         git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
     - name: Build wheels
-      uses: pypa/cibuildwheel@v2.0.0
+      uses: pypa/cibuildwheel@v2.3.0
       env:
         CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
