lower bound click dependency version

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ keywords =
 packages = find:
 install_requires =
     astropy>=4.3
-    click
+    click>=8.0.3
     dask
     dask[distributed]
     h5py
