Decay channel analysis

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ where = src
 [options.entry_points]
 console_scripts =
     nuspacesim = nuspacesim.apps.cli:cli
+    nss-tools = nuspacesim.apps.cli_misc:cli_misc
 
 [options.package_data]
 nuspacesim.data.nupyprop_tables =
