--- a/sample_plot_config.ini
+++ b/sample_plot_config.ini
@@ -1,15 +1,25 @@
+[General]
+fig_width = 8
+fig_height = 7
+pop_up = no
+save_to_file = yes
+save_as = pdf
+
+[Spectra]
+spectra_histogram = yes
+
 [Geometry]
-geom_beta_tr_hist = no
+geom_beta_tr_hist = yes
 #interaction_height = no (to be implemented)
 
 [Taus]
-taus_scatter = no
-taus_pexit = no
+taus_density_beta = yes
+taus_pexit = yes
 taus_histogram = yes
 taus_overview = yes
 
 [EASOpitcal]
-eas_optical_scatter = no
+eas_optical_density = yes
 eas_optical_histogram = yes
 
 [Detector]
