unified default colors and colormaps, implemented option to choose color/colormap, corrected default behaviors if no plot-settings are chosen when calling --plot/plotall

--- a/sample_plot_config.ini
+++ b/sample_plot_config.ini
@@ -4,6 +4,9 @@ fig_height = 7
 pop_up = no
 save_to_file = yes
 save_as = pdf
+default_color = 0
+    # as in 'C0'
+default_colormap = viridis
 
 [Spectra]
 spectra_histogram = yes
@@ -11,6 +14,7 @@ spectra_histogram = yes
 [Geometry]
 geom_beta_tr_hist = yes
 #interaction_height = no (to be implemented)
+#geometry_overview = no (to be implemented)
 
 [Taus]
 taus_density_beta = yes
@@ -21,7 +25,9 @@ taus_overview = yes
 [EASOpitcal]
 eas_optical_density = yes
 eas_optical_histogram = yes
+#eas_optical_overview = no (to be implemented)
 
 [Detector]
 #event_count_at_detector = no (to be implemented)
 #detection_prob_vs_beta = no (to be implemented)
+#detector_overview = no (to be implemented)
