added new plot function, adjusted all labels to be more uniform, switched to hexbins for 2D-histograms because they look better. Adjustments for show-plot still needed!

--- a/sample_plot_config.ini
+++ b/sample_plot_config.ini
@@ -1,6 +1,6 @@
 [General]
-fig_width = 8
-fig_height = 7
+fig_width = 10
+fig_height = 8
 pop_up = no
 save_to_file = yes
 save_as = pdf
@@ -13,7 +13,8 @@ spectra_histogram = yes
 
 [Geometry]
 geom_beta_tr_hist = yes
-#interaction_height = no (to be implemented)
+path_length_to_detector = yes
+interaction_height = no
 #geometry_overview = no (to be implemented)
 
 [Taus]
