--- a/sample_plot_config.ini
+++ b/sample_plot_config.ini
@@ -5,7 +5,7 @@ pop_up = no
 save_to_file = yes
 save_as = pdf
 default_color = 0
-    # as in 'C0'
+# as in 'C0'
 default_colormap = viridis
 
 [Spectra]
@@ -14,8 +14,8 @@ spectra_histogram = yes
 [Geometry]
 geom_beta_tr_hist = yes
 path_length_to_detector = yes
-interaction_height = no
-#geometry_overview = no (to be implemented)
+# interaction_height = no (to be implemented)
+# geometry_overview = no (to be implemented)
 
 [Taus]
 taus_density_beta = yes
@@ -26,9 +26,12 @@ taus_overview = yes
 [EASOpitcal]
 eas_optical_density = yes
 eas_optical_histogram = yes
-#eas_optical_overview = no (to be implemented)
+# eas_optical_overview = no (to be implemented)
 
 [Detector]
-#event_count_at_detector = no (to be implemented)
-#detection_prob_vs_beta = no (to be implemented)
-#detector_overview = no (to be implemented)
+# event_count_at_detector = no (to be implemented)
+# detection_prob_vs_beta = no (to be implemented)
+# detector_overview = no (to be implemented)
+
+[Overview]
+dashboard = yes
