--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 repos:
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.2.0
     hooks:
     - id: check-merge-conflict
     - id: check-added-large-files
@@ -9,7 +9,7 @@ repos:
     - id: check-xml
 
   - repo: https://github.com/ambv/black
-    rev: 21.11b1
+    rev: 22.3.0
     hooks:
       - id: black
 
@@ -25,6 +25,6 @@ repos:
         args: ["--profile", "black", "--filter-files"]
 
   - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.20.0
+    rev: v1.20.1
     hooks:
     -   id: setup-cfg-fmt
