Add Tau Table Version Support. Resolves Issue #30

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,6 @@ install_requires =
     importlib-resources;python_version<"3.9"
 python_requires = >=3.7
 ext_package = nuspacesim
-include_package_data = True
 package_dir =
     = src
 zip_safe = False
@@ -56,12 +55,13 @@ console_scripts =
 
 [options.package_data]
 nuspacesim.data.nupyprop_tables =
-    nu2tau_cdf.hdf5
-    nu2tau_pexit.hdf5
+    nu2tau_cdf.0.h5
+    nu2tau_cdf.1.h5
+    nu2tau_pexit.0.h5
+    nu2tau_pexit.1.h5
 nuspacesim.data.radio_params =
     ionosphere_params.hdf5
     waveform_params.hdf5
-nuspacesim.data.renonu2tautables = nu2taudata.hdf5
 
 [bdist_wheel]
 universal = 0
