--- a/sample_plot_config.ini
+++ b/sample_plot_config.ini
@@ -1,11 +1,11 @@
 [General]
-fig_width = 10
-fig_height = 8
-pop_up = no
+#standard_plot_size = (8,7) (to be implemented)
+pop_up = yes
 save_to_file = yes
 save_as = pdf
 default_color = 0
 # as in 'C0'
+default_markersize = 3
 default_colormap = viridis
 
 [Spectra]
@@ -15,18 +15,27 @@ spectra_histogram = yes
 geom_beta_tr_hist = yes
 path_length_to_detector = yes
 # interaction_height = no (to be implemented)
-# geometry_overview = no (to be implemented)
+# geometry_overview =  no (to be implemented)
 
 [Taus]
-taus_density_beta = yes
-taus_pexit = yes
-taus_histogram = yes
-taus_overview = yes
+energy_hists = yes
+beta_hist = yes
+tau_beta_hist = yes
+tau_lorentz_hist = yes
+tau_exit_prob_hist = yes
+tau_beta_hex = yes
+tau_lorentz_hex = yes
+tau_exit_prob_hex = yes
 
 [EASOpitcal]
-eas_optical_density = yes
-eas_optical_histogram = yes
-# eas_optical_overview = no (to be implemented)
+numpes_vs_beta = yes
+altdec_vs_numpes = yes
+showerEnergy_vs_numPEs = yes
+costhetacheff_vs_beta = yes
+altDec_vs_costhetacheff = yes
+showerEnergy_vs_costhetacheff = yes
+numpes_hist = yes
+costhetacheff_hist = yes
 
 [Detector]
 # event_count_at_detector = no (to be implemented)
@@ -35,3 +44,9 @@ eas_optical_histogram = yes
 
 [Overview]
 dashboard = yes
+taus_density_beta_overview = yes
+taus_histograms_overview = yes
+taus_pexit_overview = yes
+taus_overview = yes
+eas_optical_density_overview = yes
+eas_optical_histogram_overview = yes
