Revert "include new ResultsWriter class to write multiple tables per file"
This reverts commit 3e6818112d899cea58474f296b738df4895cbc56.

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ install_requires =
     lxml
     matplotlib
     numpy>=1.21
+    quadpy
     rich
     scipy
     cached-property;python_version<"3.8"
