New precommit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,4 @@ repos:
     rev: v2.2.0
     hooks:
     -   id: setup-cfg-fmt
+        args: ["--include-version-classifiers", "--max-py-version=3.10"]
