new nupyprop and nuleptonsim tables

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,9 +57,14 @@ nuspacesim.data.nupyprop_tables =
     nu2tau_cdf.0.h5
     nu2tau_cdf.1.h5
     nu2tau_cdf.2.h5
+    nu2tau_cdf.3.h5
     nu2tau_pexit.0.h5
     nu2tau_pexit.1.h5
     nu2tau_pexit.2.h5
+    nu2tau_pexit.3.h5
+nuspacesim.data.nuleptonsim_tables =
+    nu2tau_cdf.0.h5
+    nu2tau_pexit.0.h5
 nuspacesim.data.radio_params =
     ionosphere_params.hdf5
     waveform_params.hdf5
