--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
 keywords =
     NASA
     neutrinos
@@ -70,7 +71,7 @@ universal = 0
 
 [tox:tox]
 envlist =
-    py{37,38,39,310}
+    py{37,38,39,310,311}
     docs
 isolated_build = True
 
@@ -80,6 +81,7 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310
+    3.11: py311
 
 [testenv]
 deps =
