change jet to viridis

--- a/sample_plot_config.ini
+++ b/sample_plot_config.ini
@@ -9,7 +9,7 @@ save_as = pdf
 default_color = 0
 # as in 'C0'
 default_markersize = 3
-default_colormap = jet
+default_colormap = viridis
 # output_path = ~/Documents/Pictures
 
 [Spectra]
