--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python: [37, 38, 39, 310]
+        python: [37, 38, 39, 310, 311]
         include:
           - os: ubuntu-latest
             platform_id: manylinux_x86_64
@@ -40,7 +40,7 @@ jobs:
         git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
     - name: Build wheels
-      uses: pypa/cibuildwheel@v2.3.0
+      uses: pypa/cibuildwheel@v2.13.1
       env:
         CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
