--- a/.github/workflows/pypi-build-test-publish.yml
+++ b/.github/workflows/pypi-build-test-publish.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python: [37, 38, 39, 310, 311]
+        python: [38, 39, 310, 311]
         include:
           - os: ubuntu-latest
             platform_id: manylinux_x86_64
