--- a/setup.cfg
+++ b/setup.cfg
@@ -6,14 +6,13 @@ long_description_content_type = text/markdown
 author = Alex Reustle
 author_email = alexander.reustle@nasa.gov
 license = BSD-3-Clause-Clear
-license_file = LICENSE.txt
+license_files = LICENSE.txt
 classifiers =
     Intended Audience :: Science/Research
     License :: OSI Approved :: BSD License
     Programming Language :: C++
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
@@ -41,7 +40,7 @@ install_requires =
     configparser;python_version<"3.8"
     importlib-metadata;python_version<"3.8"
     importlib-resources;python_version<"3.9"
-python_requires = >=3.7
+python_requires = >=3.8
 ext_package = nuspacesim
 package_dir =
     = src
@@ -76,13 +75,12 @@ universal = 0
 
 [tox:tox]
 envlist =
-    py{37,38,39,310,311}
+    py{38,39,310,311}
     docs
 isolated_build = True
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
