expand CI build targets

--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -22,31 +22,45 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        python: [38, 39, 310, 311]
+        os:
+          - linux_x86_64
+          - linux_aarch64
+          - linux_ppc64le
+          - macosx_x86_64
+          - macosx_arm64
+          - macosx_universal2
+        python: [38, 39, 310, 311, 312]
         include:
-          - os: ubuntu-latest
+          - os: linux_x86_64
             platform_id: manylinux_x86_64
-          - os: macos-latest
+          - os: linux_aarch64
+            platform_id: manylinux_aarch64
+          - os: linux_ppc64le
+            platform_id: manylinux_ppc64le
+          - os: macosx_x86_64
             platform_id: macosx_x86_64
+          - os: macosx_arm64
+            platform_id: macosx_arm64
+          - os: macosx_universal2
+            platform_id: macosx_universal2
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Get history and tags for SCM versioning
       run: |
         git fetch --prune --unshallow
         git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
     - name: Build wheels
-      uses: pypa/cibuildwheel@v2.13.1
+      uses: pypa/cibuildwheel@v2.15.0
       env:
         CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
-        CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+        # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
 
     - name: Upload Build Artifact
-      uses: actions/upload-artifact@v2.2.4
+      uses: actions/upload-artifact@v3
       with:
         name: nuspacesim-gh-pypi-artifact
         path: wheelhouse/*.whl
