test action update

--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -18,33 +18,21 @@ on:
 jobs:
 
   build_wheels:
-    name: Build wheel for cp${{ matrix.python }}-${{ matrix.platform_id }}
+    name: Wheel cp${{ matrix.python }}-${{ matrix.platform }}_${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
-        os:
-          - linux_x86_64
-          - linux_aarch64
-          - linux_ppc64le
-          - macosx_x86_64
-          - macosx_arm64
-          - macosx_universal2
+        os: [ubuntu-latest, macos-latest]
         python: [38, 39, 310, 311, 312]
         include:
-          - os: linux_x86_64
-            platform_id: manylinux_x86_64
-          - os: linux_aarch64
-            platform_id: manylinux_aarch64
-          - os: linux_ppc64le
-            platform_id: manylinux_ppc64le
-          - os: macosx_x86_64
-            platform_id: macosx_x86_64
-          - os: macosx_arm64
-            platform_id: macosx_arm64
-          - os: macosx_universal2
-            platform_id: macosx_universal2
+          - os: ubuntu-latest
+            platform: manylinux
+            arch: [x86_64, aarch64, ppc64le]
+          - os: macos-latest
+            platform: macosx
+            arch: [x86_64, arm64, universal2]
 
     steps:
     - uses: actions/checkout@v3
@@ -56,8 +44,7 @@ jobs:
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.15.0
       env:
-        CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
-        # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+        CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform }}_${{ matrix.arch }}
 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3
