--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -24,16 +24,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [x86_64]
         os: [ubuntu-latest, macos-latest]
         python: [38, 39, 310, 311, 312]
         include:
           - os: ubuntu-latest
             platform: manylinux
+            arch: x86_64
             arch: aarch64
             arch: ppc64le
           - os: macos-latest
             platform: macosx
+            arch: x86_64
             arch: arm64
             arch: universal2
 
